Hunter's Dream mainly done.

--- a/forkdown.main.labels.yaml
+++ b/forkdown.main.labels.yaml
@@ -26,3 +26,9 @@ labels:
   "iw":
     name: "Invisible wall"
     icon: "🎯"
+  "o":
+    name: "Online"
+    icon: "🌐"
+  "d":
+    name: "The Old Hunters DLC content"
+    icon: "👁️"
