--- a/main.config
+++ b/main.config
@@ -1,7 +1,7 @@
 name: "Bloodborne checklist"
 
-externalLinks:
-  defaultUrl: https://bloodborne.fandom.com/wiki/
+external_links:
+  default_url: https://bloodborne.fandom.com/wiki/
   rewrites:
     - [ "Maneater Boar", "Maneater Boar (Enemy)" ]
     - pattern: "^([Bb]lood [Gg]emstone)$"
