Woods & Iosefka's Clinic.

--- a/tips.config
+++ b/tips.config
@@ -39,6 +39,9 @@ tips:
     "l":
       title: "Flavor text / lore"
       icon: "📜"
+    "ng+":
+      title: "New Game+"
+      icon: "NG+"
     "o":
       title: "Online"
       icon: "🌐"
